# Y.S-UI

./: .env.example  .replit  AGENT_SYSTEM_DB_PATCH.md  AGENT_SYSTEM_TOOLS_PATCH.md  AGENT_SYSTEM_TOOLS_PATCH.md.updated  CHANGES.md  DB_INTEGRATION_NOTE.md  DEPLOYMENT_REPORT.md  Dockerfile  ENVIRONMENT_AUDIT.md  IMPLEMENTATION_REPORT.md  LICENSE  Procfile  README.md  UPGRADE_REPORT.md  agent_system.py  build.sh  capacitor.config.json  config.py  docker-compose.yml  index.html  main.py  mcp_client.py  pyproject.toml  railway.json  replit.md  requirements.txt  telegram_bot.py  tools_api.py
android/: package.json
android/www/: index.html
db/: migrations.py  models.py  repos.py  session.py
gateway/: __init__.py  adapter.py  middleware.py  routes.py  validator.py
public/: manifest.json  sw.js
