# Updated pyproject with production-ready dependencies
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.34.2",
    "werkzeug>=3.1.8",
    "SQLAlchemy>=2.0",
    "asyncpg>=0.27.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.11.1",
    "flask-cors>=4.0.0",
    "python-json-logger>=2.0",
]
